@@ -208,6 +208,8 @@ Bug fixes since 1.6
 - Handle broken serialization in other tools [3117678]
   Some tools can't handle the joda-time stub serialization, kludge a fix for them
 
+- Standard DateTimeFieldType implements hashCode and equals for stability across serialization
+
 - Time zone compiler now handles 24:00 [2804258]
 
 - Time zone compiler now handles non-UTC better
